--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
     "accessories": [
         {
-            "accessory": "ParticleAccessory",
-            "name": "Particle",
+            "accessory": "Particle",
+            "name": "Particle Sensor",
             "platform_url": "https://api.particle.io/v1",
             "device_id": "53ff69066678505521262467",
             "access_token": "44834d2eb7e2837fec72b8272df66acc95f44386"
